--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,10 +1,11 @@
 .footer {
-    position:absolute;
+    position:fixed;
     bottom:0;
     width:100%;
-    height:60px;   /* Height of the footer */
-    border-top: 2px black solid;
+    height:40px;   /* Height of the footer */
+    border-top: 2px #6c0000 solid;
     display: flex;
     justify-content: space-around;
 	align-items: center;
+    background-color: white;
  }
