--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 nav{
-    background-color: gainsboro;
+    background-color: #6c0000;
     min-height: 5vh;
 }
 
@@ -24,4 +24,5 @@ nav{
 }
 .nav a {
     text-decoration: none;
+    color: white;
 }
