--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.drop-wrapper{
+  height: 20vh;
+  width: 100vw;
+  background-color: red;
+}
