--- a/src/pages/ProjectsPage/ProjectsPage.css
+++ b/src/pages/ProjectsPage/ProjectsPage.css
@@ -5,12 +5,22 @@
 	justify-content: space-around;
 	align-items: center;
 	align-content: center;
-    width: 100vw;
+    width: 80vw;
+	margin-left: 200px;
+
 }
 
 .projects-box{
 	min-height: 10vh;
-	border: 1px solid black;
+	border: 4px solid rgb(180, 0, 0) ;
+	border-radius: 10px;
 	margin: 1em;
 	padding: 1em;
+	
+}
+
+.projects-box h4, h5,p{
+	margin: 3px;
+	color: black;
+	text-align: start;
 }
