--- a/src/Components/AddSprintForm/AddSprintForm.css
+++ b/src/Components/AddSprintForm/AddSprintForm.css
@@ -3,12 +3,14 @@
     left: 0;
     top: 0;
     right: 0;
+    
     /* background-color: white; */
     display: flex;
     align-items: center;
     justify-content: center;
+    align-content: center;
     color:white;
-    margin-top: 150px;
+    margin-top: 150px;    
    
 }
 .modal-content{
