--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -2,10 +2,20 @@
     position:fixed;
     bottom:0;
     width:100%;
-    height:40px;   /* Height of the footer */
-    border-top: 2px #6c0000 solid;
+    height:50px;   /* Height of the footer */
+    border-top: 3px #6c0000 solid;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
 	align-items: center;
     background-color: white;
+ }
+ .footer img{
+     max-height: 40px;
+ }
+ .footer-images{
+    padding-right: 50px;
+ }
+ .footer h2{
+     color: #6c0000;
+     margin-left: -140vw;
  }
