--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -14,6 +14,9 @@ nav{
     align-content: flex-start;
     margin-left: 2vw;
 }
+.home img{
+    max-height: 30px;
+}
 
 .nav-left{
     align-content: flex-end;
@@ -25,6 +28,7 @@ nav{
     color: white;
 }
 
+
 .nav p {
     padding: 0 20px;
     color: white;
@@ -35,4 +39,27 @@ nav{
     justify-content: space-between;
 	align-items: center;
     
+}
+
+.nav button{
+    background-color: white;
+    color: #6c0000;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    margin-left: 40px;
+}
+.nav button:hover{
+    border: 2px white solid;
+    background-color: #6c0000;
+    color: white;
+}
+
+.links{
+    border-bottom: 2px white solid;    
+    padding: 2px 10px;
+}
+.links:hover{
+    border: 2px solid white;
+    border-radius:5px ;
 }
