--- a/src/Components/AddProjectForm/AddProjectForm.css
+++ b/src/Components/AddProjectForm/AddProjectForm.css
@@ -7,7 +7,7 @@
     border-left: solid rgb(161, 4, 4) 4px;
     margin: 100px;
     min-height: 60vh;
-    background-color:rgb(255, 220, 220);
+    background-color:white;
     min-width: 30vw;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
