--- a/src/pages/SprintsPage/SprintsPage.css
+++ b/src/pages/SprintsPage/SprintsPage.css
@@ -7,6 +7,7 @@
 .sprints-list {
  display: flex;
  justify-content: center;
+ margin-bottom: 80px;
  
 }
 .sprints{
@@ -15,6 +16,7 @@
     border-radius: 5px;
     margin: 10px;
     padding: 0 10px;
+    background-color: white;
 }
 
 .sprints:hover {
