--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -48,7 +48,7 @@ nav{
 .nav button{
     background-color: white;
     color: #6c0000;
-    border: none;
+    border: 2px solid #6c0000;
     border-radius: 5px;
     padding: 5px 10px;
     margin-left: 40px;
@@ -60,6 +60,9 @@ nav{
 }
 
 .links{
+    border-right: 2px solid #6c0000;
+    border-left: 2px solid #6c0000;
+    border-top: 2px solid #6c0000;
     border-bottom: 2px white solid;    
     padding: 2px 10px;
 }
