--- a/src/Components/AddProjectForm/AddProjectForm.css
+++ b/src/Components/AddProjectForm/AddProjectForm.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;    
     justify-content: center;
-    border-left: solid rgb(161, 4, 4) 4px;
+    border-left: solid #6c0000 4px;
     margin: 100px;
     min-height: 60vh;
     background-color:white;
@@ -13,7 +13,7 @@
     border-bottom-right-radius: 20px;
 }
 .add-project input{
-    border:2px rgb(182, 2, 2) solid;
+    border:2px #6c0000 solid;
     margin: 5px;
 
 }
@@ -21,13 +21,13 @@
     border-radius: 10px;
     border: transparent;
     margin-top: 20px;
-    background-color: rgb(161, 4, 4);
+    background-color: #6c0000;
     color: white;
     height: 35px;
     width: 100px;
 }
 .add-project button:hover{
-    border: 2px rgb(161, 4, 4) solid;
+    border: 2px #6c0000 solid;
     background-color: white;
-    color: rgb(161, 4, 4);
+    color: #6c0000;
 }
