--- a/src/Components/AddSprintForm/AddSprintForm.css
+++ b/src/Components/AddSprintForm/AddSprintForm.css
@@ -15,7 +15,7 @@
 }
 .modal-content{
     width: 400px;
-    background-color: rgb(80, 4, 4);
+    background-color: #6c0000;
     border-radius: 10px;
 }
 .modal-header, .modal-footer{
