--- a/src/Components/AddTaskForm/AddTaskForm.css
+++ b/src/Components/AddTaskForm/AddTaskForm.css
@@ -1,6 +1,6 @@
 .task-box{
     margin: 0;
-    background-color: rgb(119, 3, 3);
+    background-color: #6c0000;
     color: white;
     border-radius: 20px;
     padding: 40px 20px;
@@ -8,7 +8,7 @@
 }
 .task-box button{
     border: white 2px solid;
-    background-color: rgb(119, 3, 3);
+    background-color: #6c0000;
     padding: 10px 20px;
     border-radius: 10px;
     color: white;
@@ -16,5 +16,5 @@
 }
 .task-box button:hover{
     background-color: white;
-    color: rgb(119, 3, 3);
+    color: #6c0000;
 }
