--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -11,7 +11,7 @@
 }
 .h2-box{
     width: 50vw;
-    background-color: rgb(109, 2, 2);
+    background-color: #6c0000;
     padding: 90px 0;
 }
 .boxes {
