--- a/src/pages/ProjectDetailsPage/ProjectDetailsPage.css
+++ b/src/pages/ProjectDetailsPage/ProjectDetailsPage.css
@@ -1,5 +1,5 @@
 .detail-box {
-    border: 2px solid rgb(139, 1, 1);
+    border: 2px solid #6c0000;
     width: 50vw;
     margin-left: 20vw;
     display: flex;
@@ -22,20 +22,20 @@
 }
 .a:hover{
     border: none;
-    color: rgb(139, 1, 1);
+    color: #6c0000;
     border-bottom: 2px solid white;
 }
 .detail-box button{
     padding: 10px 20px;
     border-radius: 5px;
-    background-color: rgb(139, 1, 1);
+    background-color: #6c0000;
     color: white;
     border: 2px solid ;
     margin: 10px 20px;
 }
 .detail-box button:hover{
-    color: rgb(139, 1, 1);
-    border: rgb(139, 1, 1) 2px solid;
+    color: #6c0000;
+    border: #6c0000 2px solid;
     background-color: white;
 }
 .detail-box img{
@@ -53,7 +53,7 @@
 .detail-boxs button{
     padding: 10px 20px;
     border-radius: 5px;
-    background-color: rgb(139, 1, 1);
+    background-color: #6c0000;
     color: white;
     border: none;
     margin: 10px 20px;
