--- a/src/pages/ProjectsPage/ProjectsPage.css
+++ b/src/pages/ProjectsPage/ProjectsPage.css
@@ -12,7 +12,7 @@
 
 .projects-box{
 	min-height: 10vh;
-	border: 4px solid rgb(180, 0, 0) ;
+	border: 4px solid #6c0000 ;
 	border-radius: 10px;
 	margin: 1em;
 	padding: 1em;
