--- a/src/pages/SignupPage/SignupPage.css
+++ b/src/pages/SignupPage/SignupPage.css
@@ -8,7 +8,7 @@
 }
 .box-log{
     min-width: 400px;
-    background-color: rgb(107, 1, 1);
+    background-color: #6c0000;
     padding-bottom: 50px;
     border-radius: 10px;
 }
@@ -36,7 +36,7 @@
     padding: 10px 30px;
     border-radius: 10px;
     border: white solid 2px;
-    background-color: rgb(107, 1, 1);
+    background-color: #6c0000;
     color: white;
 }
 .log-box h1{
@@ -44,5 +44,5 @@
 }
 .log-box button:hover{
     background-color: white;
-    color: rgb(107, 1, 1);
+    color: #6c0000;
 }
