--- a/src/pages/SprintsPage/SprintsPage.css
+++ b/src/pages/SprintsPage/SprintsPage.css
@@ -1,5 +1,5 @@
 .sprints-list a{
-    color: rgb(156, 7, 7);    
+    color: #6c0000;    
 }
 .sprints-list a:hover{
     color: white;    
@@ -12,7 +12,7 @@
 }
 .sprints{
     display: flex;
-    border: 2px solid rgb(156, 7, 7);
+    border: 2px solid #6c0000;
     border-radius: 5px;
     margin: 10px;
     padding: 0 10px;
@@ -20,6 +20,6 @@
 }
 
 .sprints:hover {
-    background-color: rgb(156, 7, 7);
+    background-color: #6c0000;
     color: white;
 }
