--- a/src/Components/AddTaskForm/AddTaskForm.css
+++ b/src/Components/AddTaskForm/AddTaskForm.css
@@ -18,3 +18,8 @@
     background-color: white;
     color: #6c0000;
 }
+.task-box textarea{
+    border-radius: 10px;
+    max-width: 170px;
+    min-height: 50px;
+}
