--- a/src/Components/AddTaskForm/AddTaskForm.css
+++ b/src/Components/AddTaskForm/AddTaskForm.css
@@ -19,7 +19,23 @@
     color: #6c0000;
 }
 .task-box textarea{
+    margin: 5px 15px;
     border-radius: 10px;
     max-width: 170px;
     min-height: 50px;
+}
+.task-box h2 {
+    margin: 0 0 15px;
+    padding-bottom: 10px;
+    border-bottom: 2px white solid;
+}
+.task-box h4{
+    font-weight: 400;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+.task-box input{
+    margin-bottom: 10px ;
+    margin-top: 5px;
+    
 }
