task modal in sprind detail page and other fixes

--- a/src/pages/SprintDetailPage/SprintDetailPage.css
+++ b/src/pages/SprintDetailPage/SprintDetailPage.css
@@ -10,19 +10,28 @@
     margin: 20px;
     margin-bottom: 10vh;
 }
-
 .task-status h2{
-    border-bottom: 1px black solid;
-    
+    border-bottom: 1px black solid;    
 }
-
+.add-button{
+    background-color: #6c0000;
+    border: #6c0000 2px solid;
+    border-radius: 10px;
+    padding: 10px 15px;
+    color: white;
+}
+.add-button:hover{
+    background-color: white;
+    color: #6c0000;
+    border: 2px #6c0000 solid;
+    font-weight: 600;
+}
 
 /* !tutorial */
 :root {
     --disabled-color: #fad6d6;
     --background-color: #6c0000;
 }
-
 a {
     text-decoration: unset;
     cursor: pointer;
@@ -45,7 +54,6 @@ a {
     border: 1px solid var(--disabled-color);
     border-radius: 10px;
 }
-
 .row button {
     outline: none;
     background: transparent;
@@ -55,24 +63,19 @@ a {
     cursor: pointer;
     padding: 10px 10px;
 }
-
-
 input:focus {
     outline: none;
 }
-
 select {
     outline: none;
     height: 40px;
 }
-
 .row {
     display: flex;
     flex-direction: row;
     justify-content: center;
     margin: 20px;
 }
-
 .item {
     font-size: 15px;
     margin-bottom: 10px;
@@ -80,36 +83,38 @@ select {
     border-radius: 10px;
     z-index: 1;
     background-color: rgb(255, 255, 255);
+    color: #6c0000;
+    border: 2px white solid;
 }
-
+.item p {
+    color: #6c0000 ;
+}
+.item p:hover{
+    color:white;
+}
 .item:hover {
     cursor: pointer;
     background-color: #6c0000;
     color: white;
     border: 2px white solid;
 }
-
 .item-title {
     font-weight: 600;
     font-size: 16px;
 }
-
 .item-status {
     text-align: right;
 }
-
 .color-bar {
     width: 40px;
     height: 10px;
     border-radius: 5px;
 }
-
 .drop-wrapper {
     flex: 1 25%;
     width: 100%;
     height: 100%;
 }
-
 .col-wrapper {
     display: flex;
     flex-direction: column;
@@ -119,25 +124,21 @@ select {
     border-radius: 10px;
     margin-left: 10px;
 }
-
 .col-header {
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 20px;
     margin-top: 0;
 }
-
 .col {
     min-height: 400px;
     max-width: 300px;
     width: 300px;
     border-radius: 10px;
 }
-
 .highlight-region {
     background-color: rgba(252, 216, 216, 0.534);
 }
-
 .modal {
     background-color: #dcdcdc00;
     border-radius: 2px;    
@@ -145,7 +146,6 @@ select {
     outline: none;
     padding: 20px;
 }
-
 .overlay {
     display: flex;
     justify-content: center;
@@ -156,11 +156,9 @@ select {
     bottom: 0;
     background-color: rgba(0,0,0,0.5);;
 }
-
 .close-btn-ctn {
     display: flex;
 }
-
 .close-btn {
     height: 40px;
     width: 35px;
@@ -169,11 +167,9 @@ select {
     border: none;
     border-radius: 25px;
 }
-
 .close-btn:hover {
     background-color: #DCDCDC;
 }
-
 .main-sprint button{
     border: #6c0000 solid 2px;
     width: 150px;
@@ -186,7 +182,6 @@ select {
     background-color: #6c0000;
     color: white;
 }
-
 .hidden{
     display: flex;
     flex-wrap: wrap;
